Fixing for image alignment in rich editor.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-body {
-  background-color: yellow;
+img.alignleft, img.alignright, img.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  height: auto;
+  max-width: 100%;
+}
+
+@media (min-width: 768px) {
+  img.alignright {
+     float: right;
+     margin-left: 10px;
+  }
+  .alignleft {
+     float: left;
+     margin-right: 10px;
+  }
 }
